--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
     <body>
         May Node and Express be with you.
+
+        <form action="/note" method="POST">
+            <input type="text" placeholder="subject" name="subject">
+            <input type="text" placeholder="text" name="body">
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
